# ITMO-2sem-Cpp

./: README.md  file.md
CircBuffer/: CMakeLists.txt  CRational.cpp  CRational.h  Circular.hpp  CircularBuffer.h  CircularIterator.h  algo.h  main.cpp
CompTimePoly/: CMakeLists.txt  main.cpp  poly.h
CubeSolver/: CMakeLists.txt  Cube.cpp  Cube.h  Solver.cpp  Solver.h  main.cpp
Geometry/: CMakeLists.txt  executable.cpp  library.h
MyAllocator/: CMakeLists.txt  MyAlloc.h  MyMemoryManager.cpp  MyMemoryManager.h  main.cpp
Polynomial/: CMakeLists.txt  Poly.h  main.cpp
lab_2/: CMakeLists.txt  CurrencyIO.cpp  CurrencyIO.h  Stat.cpp  Stat.h  main.cpp  statCalc.cpp
